<resources>
    <string name="app_name">biodata</string>
    <string name="my_information">My Information</string>
    <string name="name_sample">Sample Name</string>
    <string name="img">img</string>
    <string name="sex_male">Sex: Male</string>
    <string name="namee">Sample Name1</string>
    <string name="bio_data_menu">Bio Data Menu</string>
    <string name="todo">TODO</string>
    <string name="age_23">Age: 23</string>
    <string name="birthday">Birthday: Month/Date/Year</string>
    <string name="todo1">TODO</string>
    <string name="nameee">Sample Name2</string>
    <string name="software_developer">Software Developer</string>
    <string name="contact_me" />
    <string name="_09123456789">#09123456789</string>
    <string name="todo123">TODO</string>
    <string name="brgy_caa_las_pi_as_city">Brgy. CAA, Las Piñas City</string>
    <string name="picture">picture</string>
    <string name="religion_catholic">Religion: Catholic</string>
    <string name="mother_quot_s_name">Mother\"s Name: Sample Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="father_s_name_">Father\'s Name: Sample Name</string>
    <string name="Religion_catholic">Religion: Catholic</string>
    <string name="habit_basketball_music_coffee_movies">Habit: Basketball, Music, Coffee, Movies</string>
    <string name="educational_background">Educational Background</string>
    <string name="campus">Sample School</string>
    <string name="college">College</string>
    <string name="collegee">Sample School</string>
    <string name="senior_high_school">Senior High School</string>
    <string name="national_high_school">National High School </string>
    <string name="junior_high_school">Junior High School</string>
    <string name="back">Back</string>
    <string name="height_5_5">Height: 5\'5</string>
    <string name="weight_57_kg">Weight: 57 Kg</string>
    <string name="name_">NAME: Sample Name</string>
    <string name="nameeeee">Sample Name3</string>
    <string name="sex_female">Sex: Female</string>
    <string name="age_21">Age: 21</string>
    <string name="birthday_">Birthday: Month/Date/Year</string>
    <string name="address_samuel_st">Address: Samuel st.</string>
    <string name="religion_none">Religion: None</string>
    <string name="mothers_name_">Mothers name: Sample Name</string>
    <string name="fathers_name_">Fathers Name: Sample Name</string>
    <string name="weight_60kg">Weight: 60kg</string>
    <string name="habit_sleep_attend_online_class_finish_the_activities_task">Habit: Sleep, Attend online class, Finish the activities/task</string>
    <string name="general_hospital_college_inc">General Hospital College Inc.</string>
    <string name="nameeeeee">Sample Name4</string>
    <string name="name_A">Name: Sample Name</string>
    <string name="todo23">TODO</string>
    <string name="age_22">Age: 22</string>
    <string name="birthday_june">Birthday: Month/Date/Year</string>
    <string name="address_lpc">Address: Address Sample</string>
    <string name="mother_quot_s_name_mommy">Mother\"s Name: Mommy</string>
    <string name="father_s_name_daddy">Father\'s Name: Daddy</string>
    <string name="height_5_6">Height: 5\'6</string>
    <string name="weight_58kg">Weight: 58kg</string>
    <string name="habit_bike_movies">Habit: Bike, Movies</string>
    <string name="national_senior_high_school_">National Senior High School </string>
    <string name="ts_cruz_high_school"> IGH SCHOOL</string>
    <string name="name_rose">NAME: Sample Name</string>
    <string name="doto5">doto5</string>
    <string name="SampleNameo">Sample Name</string>
    <string name="age_30">Age: 30</string>
    <string name="birthday_ju1">Birthday: Month/Date/Year</string>
    <string name="_city">Address: 1 Laspinas City</string>
    <string name="mothers_name_r">Mothers name: Sample Name</string>
    <string name="fathers_name_ru">Fathers name:Sample Name</string>
    <string name="height_4_11">Height: 4\'11</string>
    <string name="weight_48kg">Weight:48kg</string>
    <string name="habit_reading_books_about_human_behavior_hahahah">Habit: .. reading books about human behavior ..hahahah .</string>
    <string name="none">None</string>
    <string name="nNne">None</string>
    <string name="east_national_high_school">East National High School</string>
    <string name="sample_name">Sample Name</string>
</resources>