<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/homebackground"

    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homebackground">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/bio_data_menu"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="338dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/firstbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/button1"
                android:layout_width="338dp"
                android:layout_height="78dp"
                android:background="#00B65656"
                android:text="@string/namee"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic"
                app:iconPadding="8dp"
                app:iconSize="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="338dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/firstbutton"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <Button
                android:id="@+id/button2"
                android:layout_width="334dp"
                android:layout_height="74dp"
                android:background="#00B65656"
                android:text="@string/nameee"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="338dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/firstbutton"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/button3"
                android:layout_width="338dp"
                android:layout_height="78dp"
                android:background="#00B65656"
                android:text="@string/nameeeee"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="italic"
                app:iconPadding="8dp"
                app:iconSize="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="338dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/firstbutton"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <Button
                android:id="@+id/button4"
                android:layout_width="338dp"
                android:layout_height="80dp"
                android:background="#00B65656"
                android:text="@string/nameeeeee"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>

